[tool.poetry]
name = "easyaas"
version = "0.1.0"
description = ""
authors = ["Nilscan"]

[tool.poetry.dependencies]
python = "^3.9"
kopf = {extras = ["dev"], version = "^1.36.1"}
kubernetes = "^26.1.0"
tzdata = "^2024.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
